Simplify GraphQL validation flow
Centralize operation rules in one validator, remove unused tool wrappers, and keep final validation at the application boundary. Preserve eval behavior and make the live latency target use the configured setting.